Fix: AppStores Buttons too small on small screen

--- a/styles.css
+++ b/styles.css
@@ -459,11 +459,11 @@ footer p a{
     }
 
     .hero .hero-row .hero-left-col .app-links ul li a img{
-        width: 6rem;
+        width: 9rem;
     }
 
     .hero .hero-row .hero-left-col .app-links ul li:nth-child(2) a img{
-        width: 5.4rem;
+        width: 7rem;
     }
 
     .hero .partners h2 {
